--- a/manuscrit_G_LEFEBVRE/annexe_tableaux_graphiques_complementaires.tex
+++ b/manuscrit_G_LEFEBVRE/annexe_tableaux_graphiques_complementaires.tex
@@ -450,7 +450,7 @@ $\beta$ & 0 &0&0&0&0&0&0\\
 %\includegraphics[width=\textwidth]{poster_portrait_G_LEFEBVRE.pdf}
 \includegraphics[height=.8\textheight]{poster_portrait_G_LEFEBVRE.pdf}
 }
-\caption{Poster réalisé en \LaTeX, à l'occasion des journées de l'EDMI\protect\footnotemark~de Bordeaux. La version anglaise de ce poster a été présentée dans deux conférences internationales. Les versions française et anglaise sont toutes les deux  disponibles sur ma page web~: \url{www.math.u-bordeaux.fr/~lefeb013/} }
+\caption{\label{fig:poster}Poster réalisé en \LaTeX, à l'occasion des journées de l'EDMI\protect\footnotemark~de Bordeaux. La version anglaise de ce poster a été présentée dans deux conférences internationales. Les versions française et anglaise sont toutes les deux  disponibles sur ma page web~: \url{www.math.u-bordeaux.fr/~lefeb013/} }
 \vspace{-50mm}
 \end{figure}  
 \footnotetext{Ecole Doctorale de Mathématiques et d'Informatique}
